# Exquisitor

./: .gitignore  .gitmodules  CMakeLists.txt  Ideas.md  Install_opencv_guide.md  LICENSE  MANIFEST.in  README.md  install_exq.bat  pyproject.toml  setup.py
doc/: Ideas.md  Install_opencv_guide.md  install_exq.bat  install_exq.sh  vcpkg-install-packages.md
src/: CMakeLists.txt  ExqArrDescriptor.h  ExqArray.h  ExqClassifier.cpp  ExqClassifier.h  ExqConstants.h  ExqController.cpp  ExqController.h  ExqDataHandler.cpp  ExqDataHandler.h  ExqDataHandlerECP.cpp  ExqDataHandlerECP.h  ExqDataHandlerH5.cpp  ExqDataHandlerH5.h  ExqDataHandlerR64.cpp  ExqDataHandlerR64.h  ExqDescriptor.h  ExqFunctions.cpp  ExqFunctions.h  ExqFunctionsR64.cpp  ExqFunctionsR64.h  ExqIndex.cpp  ExqIndex.h  ExqItem.h  ExqPyInterface.cpp  ExqPyInterface.h  ExqPython.cpp  ExqPython.h  ExqR64Descriptor.h  ExqWorker.cpp  ExqWorker.h  IExqDescriptor.h  IExqFunctions.h  main.cpp
src/base/: ExqArray.cpp  ExqArray.h  ExqClassifier.cpp  ExqClassifier.h  ExqController.cpp  ExqController.h  ExqDataHandler.h  ExqDescriptor.h  ExqFunctions.h  ExqItem.h  ExqPyHelperFunctions.h  ExqPyInterface.cpp  ExqPyInterface.h  ExqWorker.cpp  ExqWorker.h  IExqDataHandler.h  IExqDescriptor.h  IExqFunctions.h  ItemFilter.cpp  ItemFilter.h
src/base/Metadata/: ItemFilter.cpp  ItemFilter.h  ItemProperties.h
src/base/eCP/: ECPCluster.cpp  ECPCluster.h  ECPConfig.cpp  ECPConfig.h  ECPFarthestNeighbour.cpp  ECPFarthestNeighbour.h  ECPIndex.cpp  ECPIndex.h  ECPNearestNeighbour.cpp  ECPNearestNeighbour.h  ECPNode.cpp  ECPNode.h  ECPPriorityQueue.cpp  ECPPriorityQueue.h  ECPQueryOptimisationPolicies.cpp  ECPQueryOptimisationPolicies.h  ECPTree.cpp  ECPTree.h
src/base/r64/: ExqDataHandlerECP.cpp  ExqDataHandlerECP.h  ExqDataHandlerH5.cpp  ExqDataHandlerH5.h  ExqDescriptorR64.h  ExqFunctionsR64.cpp  ExqFunctionsR64.h
src/eCP/: ECPCluster.cpp  ECPCluster.h  ECPConfig.h  ECPFarthestNeighbour.cpp  ECPFarthestNeighbour.h  ECPIndex.cpp  ECPIndex.h  ECPNearestNeighbour.cpp  ECPNearestNeighbour.h  ECPNode.cpp  ECPNode.h  ECPTree.cpp  ECPTree.h
src/exquisitor/: ExqArray.h  ExqClassifier.cpp  ExqClassifier.h  ExqController.cpp  ExqController.h  ExqItem.h  ExqPyHelperFunctions.h  ExqPyInterface.cpp  ExqPyInterface.h  ExqWorker.cpp  ExqWorker.h  IExqDataHandler.h  IExqDescriptor.h  IExqFunctions.h
src/exquisitor/Metadata/: ItemFilter.cpp  ItemFilter.h  ItemProperties.h
src/exquisitor/eCP/: ECPCluster.cpp  ECPCluster.h  ECPConfig.cpp  ECPConfig.h  ECPFarthestNeighbour.cpp  ECPFarthestNeighbour.h  ECPIndex.cpp  ECPIndex.h  ECPNearestNeighbour.cpp  ECPNearestNeighbour.h  ECPNode.cpp  ECPNode.h  ECPQueryOptimisationPolicies.cpp  ECPQueryOptimisationPolicies.h  ECPTree.cpp  ECPTree.h
src/exquisitor/r64/: ExqDataHandlerECP.cpp  ExqDataHandlerECP.h  ExqDataHandlerH5.cpp  ExqDataHandlerH5.h  ExqDescriptorR64.h  ExqFunctionsR64.cpp  ExqFunctionsR64.h
test/: CMakeLists.txt  ExqArray-test.cpp  ExqClassifier-test.cpp  ExqDataHandler-test.cpp  ExqDataHandlerH5-test.cpp  ExqDataHandlerR64-test.cpp  ExqFunctions-test.cpp  ExqFunctionsR64-test.cpp  ExqWorker-test.cpp  README.md  main.cpp
test/cpp_tests/: ExqArray-test.cpp  ExqClassifier-test.cpp  ExqDataHandlerECP-test.cpp  ExqDataHandlerH5-test.cpp  ExqWorker-test.cpp
test/data/: .gitignore
test/data/lsc_100K/imagenet13k/: img13k_100k_index_full.cnfg  img13k_100k_index_full.indx  vis_ids_100k.h5  vis_init_100k.h5  vis_ratios_100k.h5
test/data/lsc_100K/meta21/: distinctActivities.txt  distinctLocations.txt
test/data/random_5_10/: features.h5  ids.h5  ratios.h5  top.h5
test/python_tests/: test_initialize.py  test_suggest.py  test_train.py
wheelhouse/: exquisitor-1.0-cp311-cp311-win_amd64.whl
